welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
    	avance()
              ^SlugTracking:3: error: type mismatch;
 found   : Unit
 required: Boolean
    if(getCouleurSol() == Color.green)
    ^